[package]
name = "rs-parts-unknown"
version = "0.1.0"
authors = ["Abraham Egnor <abe.egnor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
hex = { path = "../rs-hex" }
thiserror = "1.0"
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1.6"
log = "0.4.8"
console_log = "0.1.2"
serde-wasm-bindgen = "0.1.3"