[package]
name = "rs-parts-unknown"
version = "0.1.0"
authors = ["Abraham Egnor <abe.egnor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
enum-iterator = "0.6.0"
fnv = "1.0"
hex = { path = "../rs-hex" }
js-sys = "0.3.37"
log = "0.4.8"
rand = { version ="0.7.3", features = ["wasm-bindgen"] }
serde = "1.0.105"
serde_derive = "1.0.105"
serde-wasm-bindgen = "0.1.3"
thiserror = "1.0"
ts_data_derive = { path = "./ts_data_derive" }
wasm-bindgen = "0.2.59"