[package]
name = "ts_data_derive"
version = "0.1.0"
authors = ["Abraham Egnor <abe.egnor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"

[dependencies.syn]
version = "1.0.17"
features = ["extra-traits"]